basic per-event config working

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,5 +1,22 @@
+event_source_name="Accessibility Audio Events"
 source_invalid="<invalid source {}>"
 object_variable_invalid="<invalid variable {} {}>"
 variable_invalid="<invalid variable {}>"
-source_show="{source.name} shown"
-source_hide="{source.name} hidden"
+
+source_show.message="{source.name} shown"
+source_hide.message="{source.name} hidden"
+
+props.show="Accessibility Settings"
+props.filters="filters"
+props.speech="enable speech events"
+props.speech_interrupt="speech events interrupt"
+props.sound="enable audio events"
+props.earcon_path = "path to earcon sound files (leave blank for default)"
+props.events="events"
+props.event.edit="Edit Event"
+props.event.id="Event ID"
+props.event.mute="Mute Earcons for this Event"
+props.event.message="Speech message for this event (leave blank for silence)"
+props.event.message_default="Use default message"
+props.event.save="Save settings for event"
+props.event.cancel="Cancel Event Edit"
