hotkeys to show/hide main window - in progress

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -2,6 +2,8 @@ event_source_name="Accessibility Audio Events"
 source_invalid="<invalid source {}>"
 object_variable_invalid="<invalid variable {} {}>"
 variable_invalid="<invalid variable {}>"
+hk_window_hide="Minimize OBS window"
+hk_window_show="Restore OBS window"
 
 source_show.message="{source.name} shown"
 source_hide.message="{source.name} hidden"
