many widgets in source property and filter dialogs are now labeled

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -4,12 +4,17 @@ object_variable_invalid="<invalid variable {} {}>"
 variable_invalid="<invalid variable {}>"
 hk_window_hide="Minimize OBS window"
 hk_window_show="Restore OBS window"
+add="Add"
+remove="Remove"
+edit="Edit"
+move_up="Move Up"
+move_down="Move Down"
+filters="Filters"
 
 source_show.message="{source.name} shown"
 source_hide.message="{source.name} hidden"
 
 props.show="Accessibility Settings"
-props.filters="filters"
 props.speech="enable speech events"
 props.speech_interrupt="speech events interrupt"
 props.sound="enable audio events"
