accessible filters dialog, improve hide/show window hotkeys

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -9,7 +9,7 @@ remove="Remove"
 edit="Edit"
 move_up="Move Up"
 move_down="Move Down"
-filters="Filters"
+filter_properties="Properties for {}"
 
 source_show.message="{source.name} shown"
 source_hide.message="{source.name} hidden"
